Media/Jellyfin/jellyfin.service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
  annotations:
spec:
  ports:
    - name: http
      port: 8096
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: jellyfin
