Media/Jellyfin/jellyfin.ingress-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.local.flyvmed.dk`) && PathPrefix(`/`)
    kind: Rule
    services:
    - kind: Service
      name: jellyfin
      namespace: media
      port: 8096
  tls:
    certResolver: letsencrypt
